// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders App 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <h1>
      DISAMBIGUOUS TUNES
    </h1>
    <a
      href="/"
    >
      <span
        class="home"
      >
        Back to Home
      </span>
    </a>
    <div>
      <form>
        <input
          placeholder="Search..."
          type="text"
          value=""
        />
        <button
          class="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
  <div
    class="home"
  >
    <h2>
      Find your new favorite band
    </h2>
    <p
      class="homep"
    >
      Search thousands of artists, new and old!
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders ArtistItem 1`] = `
<DocumentFragment>
  <div
    class="artist"
  >
    <h3 />
    <p>
       - 
    </p>
    <p />
  </div>
</DocumentFragment>
`;

exports[`App component renders ArtistList 1`] = `
<DocumentFragment>
  <div
    class="artists"
    data-testid="artists"
  >
    <div>
      <a
        href="/artist/Blue/3ce0a4ca-7e5a-44bf-bffe-913cd1461771"
      >
        <div
          class="artist"
        >
          <h3>
            Blue
          </h3>
          <p>
             - 
          </p>
          <p />
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App component renders Header 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <h1>
      DISAMBIGUOUS TUNES
    </h1>
    <a
      href="/"
    >
      <span
        class="home"
      >
        Back to Home
      </span>
    </a>
    <div>
      <form>
        <input
          placeholder="Search..."
          type="text"
          value=""
        />
        <button
          class="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App component renders Lyrics 1`] = `
<DocumentFragment>
  <div>
    <p>
      I had this bitch you see, she made lies to me
Her deceit, oh, it gave me a chill
But I found out now, that baby that baby ice dog
She said, we would wed in Mongolian country
Lilies shoot free, but she was snowing me

In the mountains, oh, her intent was all too clear



It was quite a sin, how the ice caved in

I was numb, I could not assist

Baby ice went down through cold cold cold ground

I said baby, that's the breaks



Leading me around like broke down hound dog

Crossing me once too often

Now she's bound for a lower station

She crossed me once too often

And now the ladies all fear this Mongolian man

With ice down his face you know I could get them involved

In unnatural acts with the aid of my cold cold stare



They'd like to make it with my big black dog

But they just don't know how to ask

You know they'd like to try anything that comes into your mind

Oh freeze on freeze on freeze on bone to bone
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders RecordingItem 1`] = `
<DocumentFragment>
  <div
    class="recording"
  >
    <span
      class="recName"
    >
      Another Night Time Flight
    </span>
    <span
      class="recLength"
    >
      3:57
    </span>
  </div>
</DocumentFragment>
`;

exports[`App component renders RecordingList 1`] = `
<DocumentFragment>
  <div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Another Night Time Flight"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Another Night Time Flight
          </span>
          <span
            class="recLength"
          >
            3:57
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Women"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Women
          </span>
          <span
            class="recLength"
          >
            3:46
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Bring Back the Love"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Bring Back the Love
          </span>
          <span
            class="recLength"
          >
            4:25
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/I'm Alone"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            I'm Alone
          </span>
          <span
            class="recLength"
          >
            4:03
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Don't Wanna Make You Cry"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Don't Wanna Make You Cry
          </span>
          <span
            class="recLength"
          >
            2:10
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Fantasy"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Fantasy
          </span>
          <span
            class="recLength"
          >
            3:30
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/I Understand"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            I Understand
          </span>
          <span
            class="recLength"
          >
            4:22
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Tired of Loving You"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Tired of Loving You
          </span>
          <span
            class="recLength"
          >
            3:43
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Capture Your Heart"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Capture Your Heart
          </span>
          <span
            class="recLength"
          >
            3:18
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/The Shepherd"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            The Shepherd
          </span>
          <span
            class="recLength"
          >
            4:40
          </span>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Strange Thing"
      >
        <div
          class="recording"
        >
          <span
            class="recName"
          >
            Strange Thing
          </span>
          <span
            class="recLength"
          >
            4:10
          </span>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App component renders ReleaseItem 1`] = `
<DocumentFragment>
  <div
    class="release"
  >
    <h2
      class="releaseTitle"
    >
      Another Night Time Flight
    </h2>
    <img
      alt="No Album Cover Found"
      src="/musicPlaceholder.jpg"
    />
    <p>
      2009-06-28
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders ReleaseList 1`] = `
<DocumentFragment>
  <div
    class="releases"
    data-testid="releases"
  >
    <div>
      <a
        href="/release/Blue Blue Blue/12503eef-7fca-4322-9012-2057995aaba7"
      >
        <div
          class="release"
        >
          <h2
            class="releaseTitle"
          >
            Another Night Time Flight
          </h2>
          <img
            alt="No Album Cover Found"
            src="/musicPlaceholder.jpg"
          />
          <p>
            2009-06-28
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/release/Blue Blue Blue/1904a7ad-ca50-44f5-9b59-a6ed6d43c93c"
      >
        <div
          class="release"
        >
          <h2
            class="releaseTitle"
          >
            Cookie In A Jar
          </h2>
          <img
            alt="No Album Cover Found"
            src="/musicPlaceholder.jpg"
          />
          <p>
            1975
          </p>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
